------------------------------------------------------------------------
r2543 | robertdahnke | 2024-02-18 19:13:09

Changed paths:
 M CHANGES.txt
 M cat_io_xml2csv.m
 M cat_run.m
 M cat_surf_createCS2.m
 M cat_surf_createCS3.m
 M cat_vol_pbtsimple.m

1) Fixed:    Corrected output in cat_surf_createCS[2|3].
2) Fixed:    Setup gyrusrecons cases in cat_vol_pbtsimple using  
             the thickness phantoms. 
3) Fixed:    Corrected cell export in cat_io_xml2csv.    
4) Changed:  Optimized CSV export in cat_run.
5) New:      Internal display function cat_tst_histBWPT.        
             
------------------------------------------------------------------------
r2542 | robertdahnke | 2024-02-15 19:42:10

Changed paths:
 M CHANGES.txt
 M cat_run.m
 M cat_surf_createCS2.m
 M cat_surf_createCS3.m
 M cat_vol_pbtsimple.m

1) Fixed:    Corrected cat_surf_createCS[2|3] debugging output. 
2) Fixed:    Corrected ROI output behaviour in cat_run.
3) Changed:  Updated gyrusreconstion in cat_vol_pbtsimple. 
------------------------------------------------------------------------
r2540 | gaser | 2024-02-14 11:18:19

Changed paths:
 M CHANGES.txt
 M cat_batch_long.sh
 M cat_conf_long.m
 M doc/index.html

Changed: Save both plasticity and aging model for long. data as default.
Changed: CUpdated html doc.
------------------------------------------------------------------------
r2538 | gaser | 2024-02-13 17:37:40

Changed paths:
 M CHANGES.txt
 M cat12.m
 M cat_conf_tools.m
 M cat_stat_check_SPM.m
 M cat_stat_check_cov_old.m
D  resources/settings/MBeautyConfigurationRules.m
D  resources/settings/MBeautyConfigurationRules.xml

Changed: Added old sample homogeneity check to GUI for use with long. data.
Changed: Call old homogeneity check in cat_stat_check_SPM if long. design is found.
------------------------------------------------------------------------
r2537 | gaser | 2024-02-13 13:38:25

Changed paths:
 M CHANGES.txt
 M Contents.m
 M cat_amap.mexa64
 M cat_ornlm.mexa64