@@ -9,7 +9,7 @@
   
     <div id="content">
       <br />
-      <p align="center" style="text-align:center;">This is <b>CAT12.9 (r2536) from 2024-02-13</b><br />You can update your copy of CAT12 here: <a href="matlab:cat_update(1);">Check for update</a>.<br />If you find any bug, please report them at <a href="mailto:vbmweb@gmail.com">vbmweb@gmail.com</a>.</p>
+      <p align="center" style="text-align:center;">This is <b>CAT12.9 (r2545) from 2024-02-18</b><br />You can update your copy of CAT12 here: <a href="matlab:cat_update(1);">Check for update</a>.<br />If you find any bug, please report them at <a href="mailto:vbmweb@gmail.com">vbmweb@gmail.com</a>.</p>
       <h1 style="text-align:center;"><img src="images/CAT.png" width=40% height=auto alt="CAT" ></h1>
 
       <hr />
